--- a/yidiandian-security-borwser/src/main/resources/resources/yidiandian-signIn.html
+++ b/yidiandian-security-borwser/src/main/resources/resources/yidiandian-signIn.html
@@ -66,7 +66,21 @@
         </tr>
     </table>
 </form>
-<br>
+<hr>
+<h3>社交登录</h3>
+
+<h3>社交登录</h3>
+<!--请求地址规则 ：/auth 取自SocialAuthenticationFilter DEFAULT_FILTER_PROCESSES_URL  ； qq 取自QQProperties providerId-->
+<a href="/auth/qq">QQ登录</a>
+&nbsp;&nbsp;&nbsp;&nbsp;
+<a href="/qqLogin/weixin">微信登录</a>
+<!--
+
+<a href="/qqLogin/callback.do">QQ登录</a>
+&nbsp;&nbsp;&nbsp;&nbsp;
+<a href="/qqLogin/weixin">微信登录</a>
+-->
+
 
 </body>
 </html>
